add transaction + note log
