# docs/swagger.yaml
@@ -325,6 +325,21 @@ definitions:
       recordsTotal:
         type: integer
     type: object
+  model.CaseNoteInput:
+    properties:
+      caseId:
+        type: string
+      createdDate:
+        type: string
+      detail:
+        type: string
+      modifiedDate:
+        type: string
+      userCreate:
+        type: string
+      userModify:
+        type: string
+    type: object
   model.CaseResponse:
     properties:
       data:
@@ -350,6 +365,84 @@ definitions:
         type: string
     type: object
   model.CaseTransactionModelInput:
+    properties:
+      actionCarType:
+        type: string
+      arriveDate:
+        type: string
+      arrivedDate:
+        type: string
+      cancelDate:
+        type: string
+      caseId:
+        type: string
+      caseStatusCode:
+        type: string
+      closeDate:
+        type: string
+      closedDate:
+        type: string
+      commandedDate:
+        type: string
+      createdDate:
+        type: string
+      createdModify:
+        type: string
+      duration:
+        type: integer
+      lat:
+        description: Consider float64 if GPS
+        type: string
+      lon:
+        type: string
+      modifiedDate:
+        type: string
+      notiStage:
+        type: string
+      owner:
+        type: string
+      receiveDate:
+        type: string
+      receivedDate:
+        type: string
+      resultCode:
+        type: string
+      resultDetail:
+        type: string
+      suggestRoute:
+        type: string
+      timeToArrive:
+        description: If it’s a string, keep as-is; else change to time.Duration or
+          time.Time
+        type: string
+      token:
+        type: string
+      updatedAccount:
+        type: string
+      userArrive:
+        type: string
+      userClose:
+        type: string
+      userClosedJob:
+        type: string
+      userCode:
+        type: string
+      userCommand:
+        type: string
+      userModify:
+        type: string
+      userName:
+        type: string
+      userReceive:
+        type: string
+      userSla:
+        type: integer
+      vehicleCode:
+        type: string
+      viewed:
+        type: integer
+    type: object
+  model.CaseTransactionUpdateInput:
     properties:
       actionCarType:
         type: string
@@ -855,6 +948,53 @@ paths:
       summary: Search Case
       tags:
       - Cases
+  /api/v1/notes:
+    post:
+      consumes:
+      - application/json
+      operationId: Create transaction Note
+      parameters:
+      - description: Case data to be created
+        in: body
+        name: Case
+        required: true
+        schema:
+          $ref: '#/definitions/model.CaseNoteInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK - Request successful
+          schema:
+            $ref: '#/definitions/model.CaseListData'
+      security:
+      - ApiKeyAuth: []
+      summary: Create transaction Note
+      tags:
+      - Transaction
+  /api/v1/notes/{id}:
+    get:
+      consumes:
+      - application/json
+      operationId: ListTransactionNote
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK - Request successful
+          schema:
+            $ref: '#/definitions/model.CaseListData'
+      security:
+      - ApiKeyAuth: []
+      summary: List Transaction Note
+      tags:
+      - Transaction
   /api/v1/trans:
     get:
       consumes:
@@ -970,7 +1110,7 @@ paths:
         name: Body
         required: true
         schema:
-          $ref: '#/definitions/model.CaseForCreate'
+          $ref: '#/definitions/model.CaseTransactionUpdateInput'
       produces:
       - application/json
       responses:
@@ -981,53 +1121,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Update an existing transaction
-      tags:
-      - Transaction
-  /api/v1/trans/notes:
-    post:
-      consumes:
-      - application/json
-      operationId: Create transaction Note
-      parameters:
-      - description: Case data to be created
-        in: body
-        name: Case
-        required: true
-        schema:
-          $ref: '#/definitions/model.CaseForCreate'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK - Request successful
-          schema:
-            $ref: '#/definitions/model.CaseListData'
-      security:
-      - ApiKeyAuth: []
-      summary: Create transaction Note
-      tags:
-      - Transaction
-  /api/v1/trans/notes/{id}:
-    get:
-      consumes:
-      - application/json
-      operationId: ListTransactionNote
-      parameters:
-      - description: id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK - Request successful
-          schema:
-            $ref: '#/definitions/model.CaseListData'
-      security:
-      - ApiKeyAuth: []
-      summary: List Transaction Note
       tags:
       - Transaction
 schemes:
